# pyPWR_AB

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  python-package.yml  versions.yml
docs/: pwr_AB.rst
pwrAB/: __init__.py  pwr_classes.py  pwr_tests.py
test/: test_pwr_tests.py
